--- a/components/Badge/Badge.css
+++ b/components/Badge/Badge.css
@@ -8,6 +8,10 @@
     text-align: center;
 }
 
+/* h1, h2, h3, h4, h5, p{
+    font-size: 14px;
+} */
+
 /* squared is standard */
 .pill{
     border-radius: 25px;
