--- a/components/Banner/Banner.css
+++ b/components/Banner/Banner.css
@@ -11,7 +11,7 @@
     background-color: gray;
     margin: 5px;
     padding: 10px;
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
     font-size: 14px;
     line-height: 20px;
     display: flex;
@@ -20,6 +20,7 @@
 
 .banner p {
     margin: 0;
+    margin-bottom: 10px;
 }
 
 .bannerheader, .banner p{
