--- a/components/Card/Card.css
+++ b/components/Card/Card.css
@@ -18,12 +18,15 @@
     font-size: 18px;
     line-height: 28px;
     color: #111827;
+    margin-top: 1em;
+    margin-bottom: 5px;
 }
 
 .card p{
     font-size: 16px;
     line-height: 24px;
     color: #6B7280;
+    margin-top: 8px;
 }
 
 .hover{
