--- a/components/Card/Card.css
+++ b/components/Card/Card.css
@@ -1,32 +1,49 @@
 .card{
     width: 350px;
-    /* background-color: palegreen; */
+    height: 180px;
     background-color: #F9FAFB;
     padding: 1.5em;
+
     display:flex; 
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
+    /* justify-content: space-between; */
+
     text-align: center;
     border-radius: 8px;
 
     margin: 10px;
     margin-top: 40px;
+
+
+    /* -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+    mask-image: linear-gradient(to bottom, black 50%, transparent 100%); */
+    /* height:  150px; */
+    /* width: 300px; */
+    /* overflow-y: scroll; */
+
 }
 
 .card h1{
     font-size: 18px;
     line-height: 28px;
     color: #111827;
-    margin-top: 1em;
-    margin-bottom: 5px;
+    margin-top: 16px;
+    /* margin-bottom: 5px; */
+    margin-bottom: 0px;
 }
 
 .card p{
     font-size: 16px;
     line-height: 24px;
     color: #6B7280;
-    margin-top: 8px;
+    margin-top: 16px;
+}
+
+.textContainer{    
+    -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+    mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+    height: 100px;
 }
 
 .hover{
@@ -36,9 +53,9 @@
 .iconContainer{
     width: 48px;
     height: 48px;
+    min-width: 48px;
+    min-height: 48px;
     border-radius: 6px;
-    /* background-color: #353535; */
-    /* color:#F9FAFB; */
 
     display:flex; 
     justify-content: center;
@@ -56,12 +73,15 @@
 
     margin-top: 1em;
     align-self: flex-end;
+    /* justify-self: flex-end; */
 
     text-decoration: none;
     /* color:#565656; */
     font-size: 16px;
     font-style:italic;
     font-weight: 500;
+    filter: brightness(0.85);
+    /* filter: grayscale(0); */
 }
 
 .linkIcon{
