--- a/components/Toast/Toast.css
+++ b/components/Toast/Toast.css
@@ -1,11 +1,34 @@
 .toast{
-    width: 80%; 
+    /* width: 60%;  */
+    /* max-width: 500px; */
+    max-width: 900px;
+    min-width: 250px; 
+    margin-left: -125px; /* Divide value of min-width by 2  */
+
+
     padding: 1em;
+    padding-right: 7em;
 
     display:flex; 
     gap: 1em;
+
     font-size: 16px;
+
+    background-color: #333; 
+    color: #fff; 
+
+    /* Sit on top of the page */
+    position: fixed; 
+    z-index: 1; 
+
+    /* 30px from bottom and from right */
+    right: 30px;
+    bottom: 30px; 
+
+
 }
+
+
 
 .toast > .icon{
     font-size: 24px;
