--- a/components/Toast/Toast.css
+++ b/components/Toast/Toast.css
@@ -1,6 +1,10 @@
 .toast{
     /* width: 60%;  */
     /* max-width: 500px; */
+
+    /* Hidden by default. Visible on click */
+    /* visibility: hidden;  */
+
     max-width: 900px;
     min-width: 250px; 
     margin-left: -125px; /* Divide value of min-width by 2  */
@@ -28,9 +32,39 @@
 
 }
 
+.toastShow {
+    visibility: visible; /* Show the snackbar */
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
 
 
 .toast > .icon{
     font-size: 24px;
     padding: 1em 0.5em;
 }
+
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  
